--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+     "postbuild": "next-sitemap"
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.7.0",
@@ -15,6 +16,7 @@
     "bootstrap": "^5.3.3",
     "jquery": "^3.7.1",
     "next": "15.0.3",
+    "next-sitemap": "^4.2.3",
     "nodemailer": "^6.9.16",
     "react": "19.0.0-rc-66855b96-20241106",
     "react-dom": "19.0.0-rc-66855b96-20241106"
