--- a/package.json
+++ b/package.json
@@ -7,16 +7,19 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-     "postbuild": "next-sitemap"
+    "postbuild": "next-sitemap"
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.7.0",
     "@popperjs/core": "^2.11.8",
     "axios": "^1.7.9",
     "bootstrap": "^5.3.3",
+    "cheerio": "^1.0.0",
     "jquery": "^3.7.1",
+    "jsdom": "^25.0.1",
     "next": "15.0.3",
     "next-sitemap": "^4.2.3",
+    "node-fetch": "^3.3.2",
     "nodemailer": "^6.9.16",
     "react": "19.0.0-rc-66855b96-20241106",
     "react-dom": "19.0.0-rc-66855b96-20241106"
