--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "cheerio": "^1.0.0",
     "jquery": "^3.7.1",
     "jsdom": "^25.0.1",
+    "lucide-react": "^0.469.0",
     "next": "15.0.3",
     "next-sitemap": "^4.2.3",
     "node-fetch": "^3.3.2",
